# pixparse

./: .gitignore  README.md  eval_ugly.py  pretrain_finetune_pre_release.sh  pyproject.toml  requirements.txt  test2.sh
src/pixparse/: __init__.py  version.py
src/pixparse/app/: ev.py  eval.py  smalleval.py  train.py
src/pixparse/data/: __init__.py  config.py  datasets_utils.py  loader.py  preprocess.py  preprocess_image.py  preprocess_text.py  transforms.py
src/pixparse/framework/: __init__.py  config.py  device.py  eval.py  fsdp.py  logger.py  monitor.py  random.py  task.py  task_cruller_pretrain.py  train.py
src/pixparse/layers/: __init__.py  bart.py
src/pixparse/models/: __init__.py  config.py  cruller.py  factory.py  image_encoder_timm.py  text_decoder_hf.py
src/pixparse/models/configs/: cruller_base.json  cruller_base_qk_siglip.json  cruller_large.json  (+6 more)
src/pixparse/task/: __init__.py  task_cruller_eval_cord.py  task_cruller_eval_docvqa.py  task_cruller_eval_ocr.py  task_cruller_eval_rvlcdip.py  task_cruller_finetune.py  task_cruller_finetune_CORD.py  task_cruller_finetune_RVLCDIP.py  task_cruller_finetune_docvqa.py  task_cruller_finetune_xent.py  task_cruller_pretrain.py  task_donut_eval_ocr.py  task_factory.py  task_registry.py
src/pixparse/tokenizer/: __init__.py  tokenizer.py
src/pixparse/tokenizers/: __init__.py  config.py  tokenizer_hf.py
src/pixparse/utils/: __init__.py  args_utils.py  donut_metrics_utils.py  file_utils.py  json_utils.py  metrics.py  name_utils.py  ocr_utils.py  s3_utils.py
tests/: conftest.py  test_data_collators.py
(+1 files in other folders)
