[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pixparse"
authors = [
    {name = "Ross Wightman", email = "ross@huggingface.co"},
    {name = "Pablo Montalvo-Leroux", email = "pablo@huggingface.co"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
keywords = ["document", "document-ai", "transformers", "ocr", "scale"]
license = {text = "Apache-2.0"}
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    "timm",
    "transformers",
    "chug",
]
dynamic = ["version"]

[tool.pdm.version]
source = "file"
path = "src/pixparse/version.py"